k8s/bases/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: material-purchase-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  template:
    metadata:
      labels:
        grafana-logs: dotnet
        grafana-metrics: dotnet
        grafana-traces: dotnet
        azure.workload.identity/use: "true"
    spec:
      priorityClassName: tier-2-service
      serviceAccountName: material-purchase-api

      volumes:
        - name: usr-material-supplying-cloud
          secret:
            secretName: material-purchase-api-confluent-cloud-secrets
        - name: config-volume
          configMap:
            name: material-purchase-api-config

      containers:
        - name: material-purchase-api
          # for easier creation of a new service its used here k8s namespace, please fix it if your Gitlab Group and K8S NS differ
          image: "gitlab.notino.com:4567/material-supplying/material-purchase"
          imagePullPolicy: IfNotPresent
          
          volumeMounts:
            - name: usr-material-supplying-cloud
              mountPath: /app/etc/kafka/confluent/users/usr-material-supplying-cloud
              readOnly: true
            - name: config-volume
              mountPath: /app/etc/config
              readOnly: true
          
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /.less-known/liveness
              port: http
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /.less-known/readiness
              port: http
            initialDelaySeconds: 15
          resources:
            limits:
              cpu: 500m
              memory: 800Mi
            requests:
              cpu: 50m
              memory: 200Mi
