k8s/bases/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: material-purchase-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
